# tanuki-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  Taskfile.yml  config.example.toml  rustfmt.toml
.github/workflows/: ci.yml  e2e.yml  release.yml
assets/dashboard/: app.js  index.html  style.css
docs/: ACCESS_CONTROL.md  CONFIGURATION.md
e2e/: Cargo.toml  docker-compose.yml
e2e/scripts/: create-pat.sh
e2e/src/: context.rs  gitlab.rs  lib.rs  shared.rs  transport.rs
e2e/tests/: branches.rs  commits.rs  groups.rs  issue_links.rs  issue_notes.rs  issues.rs  jobs.rs  labels.rs  main.rs  merge_requests.rs  milestones.rs  mr_discussions.rs  mr_drafts.rs  namespaces.rs  pipelines.rs  projects.rs  releases.rs  repository.rs  search.rs  tags.rs  users.rs  wiki.rs
e2e/tests/access_control/: mod.rs
e2e/tests/branches/: mod.rs
e2e/tests/commits/: mod.rs
e2e/tests/common/: mod.rs
e2e/tests/groups/: mod.rs
e2e/tests/issue_links/: mod.rs
e2e/tests/issue_notes/: mod.rs
e2e/tests/issues/: mod.rs
e2e/tests/jobs/: mod.rs
e2e/tests/labels/: mod.rs
e2e/tests/merge_requests/: mod.rs
e2e/tests/milestones/: mod.rs
e2e/tests/mr_discussions/: mod.rs
e2e/tests/mr_drafts/: mod.rs
e2e/tests/namespaces/: mod.rs
e2e/tests/pipelines/: mod.rs
e2e/tests/projects/: mod.rs
e2e/tests/releases/: mod.rs
e2e/tests/repository/: mod.rs
e2e/tests/search/: mod.rs
e2e/tests/tags/: mod.rs
e2e/tests/users/: mod.rs
e2e/tests/wiki/: mod.rs
src/: error.rs  lib.rs  main.rs
src/access_control/: mod.rs  patterns.rs  resolver.rs  types.rs
src/auth/: mod.rs  provider.rs  token.rs
src/config/: loader.rs  mod.rs  types.rs
src/dashboard/: metrics.rs  mod.rs  server.rs
src/error/: mcp_mapper.rs  mod.rs
src/gitlab/: client.rs  mod.rs  types.rs
src/server/: handler.rs  mod.rs
src/tools/: executor.rs  mod.rs  registry.rs
src/tools/definitions/: branches.rs  commits.rs  groups.rs  issue_links.rs  issue_notes.rs  issues.rs  labels.rs  merge_requests.rs  milestones.rs  mod.rs  mr_discussions.rs  mr_drafts.rs  namespaces.rs  pipelines.rs  projects.rs  releases.rs  repository.rs  search.rs  tags.rs  users.rs  wiki.rs
src/transport/: http.rs  mod.rs  stdio.rs
src/update/: checker.rs  config.rs  manager.rs  mod.rs
src/util/: mod.rs  secret.rs
tanuki-mcp-macros/: Cargo.toml
tanuki-mcp-macros/src/: lib.rs
tests/: access_control_tests.rs  config_tests.rs  dashboard_tests.rs  gitlab_client_tests.rs  server_handler_tests.rs  tool_execution_tests.rs  tool_registry_tests.rs  transport_tests.rs
