[package]
name = "tanuki-mcp-macros"
version = "0.2.0"
edition = "2024"
description = "Procedural macros for tanuki-mcp"
license = "MIT"
repository = "https://github.com/tarfu/tanuki-mcp"
authors = ["Tobias Breitwieser <tobias@breitwieser.biz>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.21"
